# websearxng-tool

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  model.py  pyproject.toml  start.bat
searxng/: settings.yml
src/websearx_tool/: cli.py  core.py  server.py  tools.py
