[project]
name = "websearxng-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.30.1",
    "pdfminer-six>=20250506",
    "playwright>=1.54.0",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
]
